Fixed z-index for calendar

--- a/frontend/css/taskbar.css
+++ b/frontend/css/taskbar.css
@@ -19,7 +19,7 @@
   background-color: #CCC;
   background-image: linear-gradient(#DDD,#CCC);
   font-size: 1.5em;
-  z-index: 1;
+  z-index: 5;
 }
 
 .ofcourse-taskbar i {
